--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-# History files
-.Rhistory
-.Rapp.history
-
-# Example code in package build process
-*-Ex.R
-
-# RStudio files
-.Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
+_site
+.sass-cache
+.jekyll-metadata
