--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Mindy L. Mallory
+title: Mindy L. Mallory's new webpage
 email: mallorym@illinois.edu
 description: > # this means to ignore newlines until "baseurl:"
   Migrating my website here soon.
