--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Mindy L. Mallory's new webpage
 email: mallorym@illinois.edu
-description: >  Migrating my website here soon.
+description: Migrating my website here soon.
 baseurl: "/posts" # the subpath of your site, e.g. /blog
 url: "mindymallory.github.io" # the base hostname & protocol for your site
 twitter_username: ace_prof
