--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: mallorym@illinois.edu
 description: > # this means to ignore newlines until "baseurl:"
   Migrating my webpage here soon.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://mindymallory.github.io/" # the base hostname & protocol for your site
+url: http://mindymallory.github.io/ # the base hostname & protocol for your site
 twitter_username: ace_prof
 github_username:  mindymallory
 
