--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 _site
 .sass-cache
 .jekyll-metadata
+.Rproj.user
+
+# History files
+.Rhistory
+.Rapp.history
+# Session Data files
+.RData
+.Rproj
+mindymallory.github.io.Rproj
+#
