--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: http://mindymallory.github.io/ # the base hostname & protocol for your site
 twitter_username: ace_prof
 github_username:  mindymallory
+googleplus: /u/0/103603636813375610802
 
 # Build settings
 markdown: redcarpet
